Use adaptive lightning for a lot of lights.

--- a/automations/004 dining area/wallswitch_ceiling.yaml
+++ b/automations/004 dining area/wallswitch_ceiling.yaml
@@ -1,22 +1,11 @@
-- alias         : dining_area_wallswitch_ceiling
-  id            : 267b50f3-97af-41b5-949b-f08cfb795d4d
-  mode          : queued
+- alias             : dining_area_wallswitch_ceiling
+  id                : 267b50f3-97af-41b5-949b-f08cfb795d4d
+  mode              : queued
   trigger:
-    - platform  : state
-      entity_id : binary_sensor.dining_area_wallswitch
-      from      : 'off'
-      to        : 'on'
-    - platform  : state
-      entity_id : binary_sensor.dining_area_wallswitch
-      from      : 'on'
-      to        : 'off'
+    - platform      : state
+      entity_id     : binary_sensor.dining_area_wallswitch
   condition:
-    - condition    : template
-      value_template: "{{ ((as_timestamp(now()) - as_timestamp(states('sensor.uptime'))) / 60) | int > 2 }}"
+    - "{{ ((as_timestamp(now()) - as_timestamp(states('sensor.uptime'))) / 60) | int > 2 }}"
   action:
-    - service      : light.toggle
-      data:
-        entity_id     : light.dining_area_ceiling_group
-        kelvin        : "{{ state_attr('sensor.circadian_values', 'colortemp') | int }}"
-#        brightness_pct: "{{ state_attr('switch.circadian_lighting_landings', 'brightness') | int }}"
-        transition    : 1
+    - service       : light.toggle
+      entity_id     : light.dining_area_ceiling_group
