--- a/automations/200 landing/ceiling_off.yaml
+++ b/automations/200 landing/ceiling_off.yaml
@@ -8,9 +8,9 @@
   action:
     - choose:
       - conditions:
-          condition    : state
-          entity_id    : binary_sensor.second_floor_landing_motionsensor_zone
-          state        : 'on'             # Do not turn off light if the motion event is still active.
+          - condition  : state
+            entity_id  : binary_sensor.second_floor_landing_motionsensor_zone
+            state      : 'on'             # Do not turn off light if the motion event is still active.
         sequence:                         # In this case restart the timer and wait for it to trigger on a falling edge.
           - service    : timer.start
             entity_id  : timer.second_floor_landing_light_timeout
