--- a/integrations/logger.yaml
+++ b/integrations/logger.yaml
@@ -5,7 +5,7 @@
 logger:
   default: warning
   logs:
-    homeassistant.components.plex.media_player : info
+    homeassistant.components.plex.media_player: info
 #    custom_components.hacs: debug
 #    hacs: debug
 
@@ -15,10 +15,12 @@ logger:
 #    homeassistant.components.withings          : error
 #    homeassistant.components.life360           : debug     # To show circles (zones) information during boot
 
-    # Debug info about ZHA (usefull for firmware updates)
+# Debug info about ZHA (usefull for firmware updates)
 #    homeassistant.components.zha               : debug
 #    zigpy                                      : debug
 #    zigpy_deconz                               : debug
 #    bellows                                    : debug
 
 #    homeassistant.components.http              : debug
+
+#    custom_components.adaptive_lighting        : debug
