--- a/automations/001 restroom/light_off.yaml
+++ b/automations/001 restroom/light_off.yaml
@@ -1,19 +1,34 @@
 - alias            : restroom_light_off
   id               : 2f2f88d3-bc9d-4f68-aeea-d72a2af2caec
+  mode             : single
   trigger:
+    - platform     : homeassistant
+      event        : start
     - platform     : event
-      event_type   : timer.finished
-      event_data:
-        entity_id  : timer.restroom_light_timeout
+      event_type   : automation_reloaded
+    - platform     : state
+      entity_id    : light.restroom_light
+      to           : "on"
+      for:
+        minutes    : 1
+    - platform     : state
+      entity_id    : binary_sensor.restroom_motionsensor_zone
+      to           : "off"
+      for:
+        minutes    : 1
+  condition:
+    - condition    : state
+      entity_id    : light.restroom_light
+      state        : "on"
+    - condition    : state
+      entity_id    : binary_sensor.restroom_motionsensor_zone
+      state        : "off"
+      for:
+        minutes    : 1
+    - condition    : state
+      entity_id    : input_boolean.cleaning_mode
+      state        : "off"
   action:
-    - choose:
-      - conditions:
-          condition    : state
-          entity_id    : binary_sensor.restroom_motionsensor_zone
-          state        : 'on'             # Do not turn off light if the motion event is still active.
-        sequence:                         # In this case restart the timer and wait for it to trigger on a falling edge.
-          - service    : timer.start
-            entity_id  : timer.restroom_light_timeout
-      default:
-        - service      : light.turn_off
-          entity_id    : light.restroom_light
+    - service      : light.turn_off
+      target:
+        entity_id  : light.restroom_light
