Create group for bedroom 2

--- a/automations/103 bedroom 2/lights_blink_when_allowed_out_bed.yaml
+++ b/automations/103 bedroom 2/lights_blink_when_allowed_out_bed.yaml
@@ -11,6 +11,6 @@
   action:
     - service     : light.turn_on
       data:
-        entity_id : light.bedroom_2_ceiling
+        entity_id : light.bedroom_2_lights
         brightness: 255
         flash     : long
