--- a/automations/103 bedroom 2/wallswitch_light_ceiling.yaml
+++ b/automations/103 bedroom 2/wallswitch_light_ceiling.yaml
@@ -3,14 +3,14 @@
   trigger:
     - platform  : state
       entity_id : binary_sensor.bedroom_2_wallswitch
-      from      : 'off'
-      to        : 'on'
+      from      : "off"
+      to        : "on"
     - platform  : state
       entity_id : binary_sensor.bedroom_2_wallswitch
-      from      : 'on'
-      to        : 'off'
+      from      : "on"
+      to        : "off"
   condition:
     - "{{ ((as_timestamp(now()) - as_timestamp(states('sensor.uptime'))) / 60) | int > 2 }}"
   action:
     - service   : light.toggle
-      entity_id : light.bedroom_2_ceiling
+      entity_id : light.bedroom_2_lights
