--- a/customizations/lights.yaml
+++ b/customizations/lights.yaml
@@ -8,12 +8,11 @@ light.dining_area_ceiling_group:
 light.kitchen_ceiling_group:
   icon          : mdi:food-fork-drink
 
-#light.hallway_lights:
-#  friendly_name : "Hal"
-#  icon          : mdi:toilet
-
 light.first_floor_landing_ceiling:
   icon          : mdi:home-floor-1
+
+light.second_floor_landing_ceiling:
+  icon          : mdi:home-floor-2
 
 light.bathroom_lights:
   friendly_name : "Badkamer"
@@ -23,14 +22,16 @@ light.bedroom_master_ceiling:
   icon          : mdi:bed-queen
 
 light.bedroom_1_lights:
+  friendly_name : "Olivia's kamer"
+  icon          : mdi:bed
+
+light.bedroom_2_lights:
+  friendly_name : "Matthijs' kamer"
+  icon          : mdi:bed
+
+light.bedroom_3_lights:
   friendly_name : "Damian's kamer"
   icon          : mdi:bed
-
-light.bedroom_2_ceiling:
-  icon          : mdi:bed
-
-light.second_floor_landing_ceiling:
-  icon          : mdi:home-floor-2
 
 light.attic_laundry_room:
   icon          : mdi:washing-machine
@@ -38,6 +39,3 @@ light.attic_laundry_room:
 light.home_office:
   friendly_name : "Thuiskantoor"
   icon          : mdi:briefcase
-
-light.attic_bedroom:
-  icon          : mdi:bed-empty
