--- a/automations/100 landing/light_cleaning_mode.yaml
+++ b/automations/100 landing/light_cleaning_mode.yaml
@@ -1,15 +1,14 @@
-- alias            : first_floor_landing_ceiling_cleaning_mode
+- alias            : first_floor_landing_light_cleaning_mode
   id               : cc78769d-e674-4508-9fc1-620a41a74846
   trigger:
     - platform     : state
       entity_id    : input_boolean.cleaning_mode
-      to           : 'on'
+      to           : "on"
   action:
-    - service      : timer.cancel
-      entity_id    : timer.first_floor_landing_light_timeout
     - service      : light.turn_on
-      data:
+      target:
         entity_id  : light.first_floor_landing_ceiling
+      data:
         color_temp : 180
         brightness : 255
         transition : 1
