--- a/automations/104 bathroom/lights_cleaning_mode.yaml
+++ b/automations/104 bathroom/lights_cleaning_mode.yaml
@@ -3,13 +3,12 @@
   trigger:
     - platform     : state
       entity_id    : input_boolean.cleaning_mode
-      to           : 'on'
+      to           : "on"
   action:
-    - service      : timer.cancel
-      entity_id    : timer.first_floor_landing_light_timeout
     - service      : light.turn_on
-      data:
+      target:
         entity_id  : light.bathroom_lights
+      data:
         color_temp : 180
         brightness : 255
         transition : 1
