--- a/entities/binary_sensors/template.yaml
+++ b/entities/binary_sensors/template.yaml
@@ -10,3 +10,8 @@
 #        or is_state('binary_sensor.xiaomimotionsensor_occupancy', 'detected')
 #        or is_state('binary_sensor.overloop_motionsensor_motion', 'detected')
 #        or is_state('binary_sensor.badkamer_motionsensor_motion', 'detected') }}
+
+    bathroom_inhibit_lights:
+      value_template: >-
+        {{ is_state('input_boolean.cleaning_mode', 'false')
+        or is_state('binary_sensor.bathroom_hygrostat', 'on') }}
