--- a/automations/200 landing/wallswitch_light_ceiling.yaml
+++ b/automations/200 landing/wallswitch_light_ceiling.yaml
@@ -10,8 +10,7 @@
       event_data:
         device_ieee : 00:15:8d:00:05:21:65:45
         command     : 'single'
-  condition:
-    - "{{ ((as_timestamp(now()) - as_timestamp(states('sensor.uptime'))) / 60) | int > 2 }}"
   action:
     - service       : light.toggle
-      entity_id     : light.second_floor_landing_ceiling
+      target:
+        entity_id   : light.second_floor_landing_ceiling
