Improve esphome files: * Decrease wifi signal interval to 300s. Less data in HA. * Remove uptime sensor. Less data in HA. * Use new uptime_timestamp sensor. * Use new speed fan settings

--- a/esphome/d1_mini_mechanical_ventilation.yaml
+++ b/esphome/d1_mini_mechanical_ventilation.yaml
@@ -33,11 +33,9 @@ esphome:
 binary_sensor:
   - !include shared/binary_sensors/status.yaml
 
-text_sensor:
-  - !include shared/text_sensors/version.yaml
-
 sensor:
   - !include shared/sensors/uptime.yaml
+  - !include shared/sensors/uptime_timestamp.yaml
   - !include shared/sensors/wifi_signal.yaml
 
 switch:
@@ -60,7 +58,9 @@ fan:
   platform          : speed
   output            : pwm_output
   name              : "${devicelocation} Fan"
-  speed:
-    low             : 0.25
-    medium          : 0.45
-    high            : 0.8
+  speed_count       : 100 # %
+# Configuring individual speeds is deprecated.
+#  speed:
+#    low             : 0.25
+#    medium          : 0.45
+#    high            : 0.8
