--- a/esphome/shared/device_powerplug.yaml
+++ b/esphome/shared/device_powerplug.yaml
@@ -22,11 +22,9 @@ esphome:
 <<: !include common.yaml
 <<: !include status_led.yaml
 
-text_sensor:
-  - !include text_sensors/version.yaml
-
 sensor:
   - !include sensors/uptime.yaml
+  - !include sensors/uptime_timestamp.yaml
   - !include sensors/wifi_signal.yaml
 
   # Measure power
