--- a/entities/persons/stefan.yaml
+++ b/entities/persons/stefan.yaml
@@ -2,6 +2,6 @@
   id      : stefan
   user_id : !secret user_id_stefan
   device_trackers:
-    - device_tracker.stefan_phone_wifi
-    - device_tracker.stefan_phone_bt
+    - device_tracker.stefan_phone_app
     - device_tracker.life360_stefan
+    - device_tracker.telefoon_stefan
