Trigger on any attribute change of updater sensor. This way I always get a new notification when there is a new version out.

--- a/automations/002 utility closet/alert_upgrade.yaml
+++ b/automations/002 utility closet/alert_upgrade.yaml
@@ -6,8 +6,10 @@
   trigger:
     platform    : state
     entity_id   : binary_sensor.updater
-    from        : "off"
-    to          : "on"
+  condition:
+    - condition : state
+      entity_id : binary_sensor.updater
+      state     : "on"
   action:
     - service   : notify.stefan
       data:
