add use-address parameter To rename hostnames More info: https://esphome.io/components/esphome.html#changing-esphome-node-name

--- a/esphome/shared/common.yaml
+++ b/esphome/shared/common.yaml
@@ -9,6 +9,7 @@ wifi:
     static_ip : ${ip_address}
     gateway   : !secret gateway_ip
     subnet    : 255.255.255.0
+#  use_address: nodemcu_utility_closet.local
 
 # Enable WiFi hotspot
 # https://esphome.io/components/captive_portal.html
