--- a/esphome/powerplug-1.yaml
+++ b/esphome/powerplug-1.yaml
@@ -1,5 +1,5 @@
 substitutions:
-  devicename        : "powerplug_1"
+  devicename        : "powerplug-1"
   devicelocation    : "Staircase Closet Floorheatingpump Outlet"
   current_res       : '0.00290'   # Higher value gives lower watt readout
   voltage_div       : '940'       # Lower value gives lower voltage readout
