--- a/integrations/recorder.yaml
+++ b/integrations/recorder.yaml
@@ -6,3 +6,12 @@
 recorder:
   # Specify the number of history days to keep in recorder database after a purge. (default: 10)
   purge_keep_days : 14
+  exclude:
+    entities:
+      - switch.adaptive_lighting_landings
+      - switch.adaptive_lighting_bathroom
+      - switch.adaptive_lighting_bedrooms
+      - switch.adaptive_lighting_dining_area_ceiling
+      - sensor.time
+      - sensor.date_time_iso
+
