Added some utility meters Need to expand on this in the future Also include water meter, etc.

--- a/entities/sensors/template.yaml
+++ b/entities/sensors/template.yaml
@@ -17,6 +17,16 @@
       friendly_name       : "sun_elevation"
       value_template      : "{{ state_attr('sun.sun', 'elevation') }}"
 
+    daily_energy:
+      friendly_name       : Daily Energy
+      unit_of_measurement : kWh
+      value_template      : "{{ states('sensor.daily_energy_offpeak')|float + states('sensor.daily_energy_peak')|float }}"
+
+    monthly_energy:
+      friendly_name       : Monthly Energy
+      unit_of_measurement : kWh
+      value_template      : "{{ states('sensor.monthly_energy_offpeak')|float + states('sensor.monthly_energy_peak')|float }}"
+
 #    unavailable_entities:
 #      entity_id           : sensor.time
 #      friendly_name       : Unavailable Entities
