--- a/integrations/zha.yaml
+++ b/integrations/zha.yaml
@@ -3,6 +3,6 @@ zha:
     ota:
       ikea_provider: true                        # Auto update Trådfri devices
       #ledvance_provider: true                   # Auto update LEDVANCE devices
-      #otau_directory: /path/to/your/ota/folder  # Utilize .ota files to update everything else
+      otau_directory: /config/zha_ota            # Utilize .ota files to update everything else
 
 # More info: https://www.home-assistant.io/integrations/zha/#ota-firmware-updates
